# rddensity

./: .gitattributes  .gitignore  CHANGELOG.md  README.md
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish-python.yml
Python/: rddensity_illustration.py  rddensity_plot_illustration.py  rddensity_senate.csv
Python/rddensity/: LICENSE.md  README.md  ToBuild.txt  pyproject.toml  requirements.txt  setup.cfg  todo.org
Python/rddensity/docs/source/: conf.py  index.rst  modules.rst  rdbwdensity.rst  rddensity.rst  rdplotdensity.rst
Python/rddensity/src/rddensity/: __init__.py  funs.py  rdbwdensity.py  rddensity.py  rdplotdensity.py  requirements.txt
Python/rddensity/tests/: rddensity_senate.csv  test.py  test_numerical_baseline.py
Python/rddensity/tests/fixtures/: numerical-baseline.csv
R/: rddensity_illustration.R  rddensity_plot_illustration.R  rddensity_senate.csv
R/rddensity/: .Rhistory  DESCRIPTION  NAMESPACE
R/rddensity/.Rproj.user/660DC62E/: persistent-state
R/rddensity/.Rproj.user/660DC62E/pcs/: files-pane.pper  (+2 more)
R/rddensity/R/: rdbwdensity.R  rddensity-package.R  rddensity.R  rddensity_fun.R  rddensity_senate.R  rdplotdensity.R
R/rddensity/data/: rddensity_senate.RData
R/rddensity/man/: Cgenerate.Rd  Cminusgenerate.Rd  Cplusgenerate.Rd  Ggenerate.Rd  Gminusgenerate.Rd  Gplusgenerate.Rd  Psigenerate.Rd  Sgenerate.Rd  Sminusgenerate.Rd  Splusgenerate.Rd  h_opt_density.Rd  h_opt_density_res.Rd  print.CJMrdbwdensity.Rd  print.CJMrddensity.Rd  rdbwdensity.Rd  rddensity-package.Rd  rddensity.Rd  rddensityUnique.Rd  rddensity_H.Rd  rddensity_fV.Rd  rddensity_senate.Rd  rdplotdensity.Rd  summary.CJMrdbwdensity.Rd  summary.CJMrddensity.Rd
R/rddensity/tests/: testthat.R
R/rddensity/tests/testthat/: test-numerical-baseline.R
scripts/: benchmark-runtime.py  branch-protection-main.json  build-stata-help-pdfs.do  build-stata-help-pdfs.py  build-stata-mlib.do  build-stata-mlib.py  check-stata-package.do  compare-numerical-baselines.py  compare-public-local.py  numerical-stata-baseline.do
stata/: lrddensity.mlib  rdbwdensity.ado  rdbwdensity.sthlp  rddensity.ado  rddensity.pkg  rddensity.sthlp  rddensity_fun.do  rddensity_fv.mo  rddensity_h.mo  rddensity_illustration.do  rddensity_plot_illustration.do  rddensity_quantile.mo  rddensity_rep.mo  rddensity_senate.dta  rddensity_unique.mo  stata.toc
stata/tests/fixtures/: numerical-baseline.csv  numerical-comparison.csv
(+10 files in other folders)
