[metadata]
name = rddensity
version = 2.4.5
author = Rajita Chandak
author_email = rchandak@princeton.edu
description = Mainpulation testing based on Density Discontinuity
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdpackages/rddensity
project_urls =
    Bug Tracker = https://github.com/rdpackages/rddensity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    scipy
    sympy
    plotnine
    lpdensity

[options.packages.find]
where = src
