[metadata]
name = rddensity
version = 2.6
author = Matias D. Cattaneo, Ricardo Masini, Rocio Titiunik, Gonzalo Vazquez-Bare
author_email = Matias D. Cattaneo <matias.d.cattaneo@gmail.com>, Ricardo Masini <ricardo.masini@gmail.com>, Rocio Titiunik <rocio.titiunik@gmail.com>, Gonzalo Vazquez-Bare <gvazquezbare@gmail.com>
maintainer = Matias D. Cattaneo
maintainer_email = matias.d.cattaneo@gmail.com
description = Manipulation testing based on density discontinuity.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-only
license_files = LICENSE.md
url = https://github.com/rdpackages/rddensity
project_urls =
    Homepage = https://rdpackages.github.io/
    Bug Tracker = https://github.com/rdpackages/rddensity/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.23
    pandas>=2.0.0
    scipy>=1.10
    sympy>=1.12
    plotnine>=0.13.0
    lpdensity>=2.2

[options.extras_require]
dev =
    pytest
    build
    setuptools
    twine
    wheel

[options.packages.find]
where = src
